# ai-photo-frame-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
src/local_shazam/: __init__.py  __main__.py  aesthetic_cache.py  config.py  exceptions.py  flux2_client.py  image_transformer.py  openai_client.py  process_images.py  server.py
src/local_shazam/api/: __init__.py  routes.py
src/local_shazam/prompts/: __init__.py  describe_image.txt  flux_transform.txt  search_aesthetic.txt
tests/: conftest.py  test_local_shazam.py
